Commit user model

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,4 @@
 development:
-  mail_username: khachung2804@gmail.com
-  mail_password: thulovehung
+  mail_username: trucquynh1723@gmail.com
+  mail_password: trucquynh
+  
